--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,5 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "github": {
-    "silent": true
-  }
+  "framework": "vite"
 } 
